--- a/work/macos/dotfiles/.gitconfig
+++ b/work/macos/dotfiles/.gitconfig
@@ -7,7 +7,7 @@
 	# View abbreviated SHA, description, and history graph of the latest 20 commits
 	l = log --pretty=oneline -n 20 --graph --abbrev-commit
 	# View the current working tree status using the short format
-	s = status -s
+	s = status
 	# Show the diff between the latest commit and the current state
 	d = !"git diff-index --quiet HEAD -- || clear; git diff --patch-with-stat"
 
@@ -25,3 +25,9 @@
 [branch "master"]
 	remote = origin
 	merge = refs/heads/master
+
+[push]
+    autoSetupRemote = always
+
+[core]
+    excludesFile = ~/.global-gitignore
